JS code for checking the numbers

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 
     <body>
 
+        <div class="">
+            
+
+            <button class="fizzBuzzBtn"> Click to Fizz Buzz! </button>
+        </div>
     </body>
 </html>
